# snark-setup

./: .gitignore  .rustfmt.toml  Cargo.toml  benchmark.sh
.github/workflows/: core.yml
phase1/: Cargo.toml
phase1-cli/: Cargo.toml  README.md
phase1-cli/src/: combine.rs  contribute.rs  lib.rs  new_challenge.rs  prepare_phase2.rs  split.rs  transform_pok_and_correctness.rs  transform_ratios.rs
phase1/benches/: phase1.rs
phase1/src/: aggregation.rs  computation.rs  initialization.rs  key_generation.rs  lib.rs  serialization.rs  verification.rs
phase1/src/helpers/: accumulator.rs  buffers.rs  testing.rs
phase1/src/objects/: parameters.rs  private_key.rs  public_key.rs
phase1/tests/: marlin.rs
phase2/: Cargo.toml
phase2-cli/: Cargo.toml  README.md
phase2-cli/scripts/: phase2_chunked.sh
phase2-cli/src/: combine.rs  contribute.rs  lib.rs  new_challenge.rs  prepare_phase2.rs  verify.rs
phase2/src/: chunked_groth16.rs  keypair.rs  lib.rs  load_circuit.rs  parameters.rs  polynomial.rs
phase2/src/helpers/: testing.rs
phase2/tests/: mpc.rs
setup-utils/: Cargo.toml
setup-utils/benches/: io.rs  math.rs
setup-utils/src/: converters.rs  elements.rs  errors.rs  groth16_utils.rs  helpers.rs  lib.rs  seed.rs
setup-utils/src/batch/: arith.rs  bigint.rs  bucketed_add.rs  glv.rs  mod.rs  short_weierstrass_arith.rs  spec.md  twisted_edwards_arith.rs  verify.rs
setup-utils/src/batch/curves/: bls12_377.rs  bls12_381.rs  bw6_761.rs  mod.rs
setup-utils/src/io/: mod.rs  read.rs  write.rs
