[workspace]
members = ["phase1", "phase1-cli", "phase2", "phase2-cli", "setup-utils"]

[patch.'https://github.com/scipr-lab/zexe']
algebra_core = { git = "https://github.com/celo-org/zexe", package = "algebra-core", default-features = false, features = [
    "derive",
] }
algebra_core_derive = { git = "https://github.com/celo-org/zexe", package = "algebra-core-derive", default-features = false, features = [
] }
algebra = { git = "https://github.com/celo-org/zexe", package = "algebra", default-features = false, features = [
    "ed_on_bls12_381",
    "bls12_381",
    "bls12_377",
] }
crypto-primitives = { git = "https://github.com/celo-org/zexe", package = "crypto-primitives", default-features = false, features = [
    "ed_on_bls12_381",
    "bls12_381",
    "bls12_377",
] }
fft = { git = "https://github.com/celo-org/zexe", package = "ff-fft", default-features = false, features = [
    "ed_on_bls12_381",
    "bls12_381",
    "bls12_377",
] }
bench_utils = { git = "https://github.com/celo-org/zexe", package = "bench-utils", default-features = false, features = [
    "ed_on_bls12_381",
    "bls12_381",
    "bls12_377",
] }
r1cs_core = { git = "https://github.com/celo-org/zexe", package = "r1cs-core", default-features = false }
r1cs_std = { git = "https://github.com/celo-org/zexe", package = "r1cs-std", default-features = false, features = [
    "ed_on_bls12_381",
    "bls12_381",
    "bls12_377",
] }
groth16 = { git = "https://github.com/celo-org/zexe", package = "groth16", default-features = false, features = [
] }

[patch.'https://github.com/scipr-lab/poly-commit']
poly-commit = { git = "https://github.com/celo-org/poly-commit", rev = "4feda97c665a983304fabff789c76baadff08201" }

# Force arkworks to be built with optimization level 2.
[profile.dev.package.ark-ff]
opt-level = 2

[profile.test.package.ark-ff]
opt-level = 2

[profile.dev.package.ark-ec]
opt-level = 2

[profile.test.package.ark-ec]
opt-level = 2

[profile.dev.package.ark-mnt4-753]
opt-level = 2

[profile.test.package.ark-mnt4-753]
opt-level = 2

[profile.dev.package.ark-mnt6-753]
opt-level = 2

[profile.test.package.ark-mnt6-753]
opt-level = 2
