[workspace]
members = ["phase1", "phase1-cli", "phase2", "phase2-cli", "setup-utils"]

# Force arkworks to be built with optimization level 2.
[profile.dev.package.ark-ff]
opt-level = 2

[profile.test.package.ark-ff]
opt-level = 2

[profile.dev.package.ark-ec]
opt-level = 2

[profile.test.package.ark-ec]
opt-level = 2

[profile.dev.package.ark-mnt4-753]
opt-level = 2

[profile.test.package.ark-mnt4-753]
opt-level = 2

[profile.dev.package.ark-mnt6-753]
opt-level = 2

[profile.test.package.ark-mnt6-753]
opt-level = 2
