[package]
name = "phase1-cli"
version = "0.3.0"
authors = [
    "Georgios Konstantopoulos <me@gakonst.com>",
    "Kobi Gurkan <kobigurk@gmail.com>",
    "The Aleo Team <hello@aleo.org>",
]
description = "CLI implementation of Phase 1"
homepage = "https://github.com/celo-org/snark-setup"
repository = "https://github.com/celo-org/snark-setup"
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
phase1 = { path = "../phase1", default-features = false }
setup-utils = { path = "../setup-utils", default-features = false }

ark-ec = { version = "0.4", features = ["std"] }
ark-bls12-377 = { version = "0.4", features = ["std"] }
ark-bls12-381 = { version = "0.4", features = ["std"] }
ark-bw6-761 = { version = "0.4", features = ["std"] }
ark-mnt4-753 = { version = "0.4", features = ["std"] }
ark-mnt6-753 = { version = "0.4", features = ["std"] }

gumdrop = { version = "0.8" }
hex = { version = "0.4" }
memmap = { version = "0.7" }
rand = { version = "0.8" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.2" }

[dev-dependencies]
rand_xorshift = { version = "0.2" }
wasm-bindgen-test = { version = "0.3.15" }

[build-dependencies]
rustc_version = { version = "0.2" }

[features]
default = ["cli"]
cli = ["phase1/cli", "parallel", "setup-utils/cli"]
parallel = ["phase1/parallel", "setup-utils/parallel", "ark-ec/parallel"]

[[bin]]
name = "phase1"
required-features = ["cli"]

[[bin]]
name = "prepare_phase2"
required-features = ["cli"]
