[package]
name = "phase1"
version = "0.3.0"
authors = [
    "Sean Bowe",
    "Alex Vlasov",
    "Georgios Konstantopoulos <me@gakonst.com>",
    "Kobi Gurkan <kobigurk@gmail.com>",
    "The Aleo Team <hello@aleo.org>",
]
description = "Core logic for Phase 1"
homepage = "https://github.com/celo-org/snark-setup"
repository = "https://github.com/celo-org/snark-setup"
license = "MIT/Apache-2.0"
edition = "2021"

[[bench]]
name = "phase1"
harness = false
required-features = ["benchmark"]

[dependencies]
setup-utils = { path = "../setup-utils", default-features = false }

ark-ec = { version = "0.4", features = ["std"] }
ark-ff = { version = "0.4", features = ["std"] }
ark-serialize = { version = "0.4", features = ["std"] }
ark-std = { version = "0.4", features = ["std"] }
ark-mnt4-753 = "0.4"
ark-mnt6-753 = "0.4"

cfg-if = { version = "1.0" }
criterion = { version = "0.5", optional = true }
itertools = { version = "0.11" }
rand = { version = "0.8" }
rayon = { version = "1.7", optional = true }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.2" }
derivative = { version = "2", features = ["use_core"] }

[dev-dependencies]
phase1 = { path = "./", features = ["testing"] }

ark-bls12-377 = { version = "0.4", features = ["std"] }
ark-bls12-381 = { version = "0.4", features = ["std"] }
ark-bw6-761 = { version = "0.4", features = ["std"] }
ark-relations = { version = "0.4", features = ["std"] }
ark-marlin = { version = "0.3", features = ["std"] }
ark-poly-commit = { version = "0.4", features = ["std"] }
ark-poly = { version = "0.4", features = ["std"] }
ark-crypto-primitives = { version = "0.4", features = ["std"] }

anyhow = { version = "1.0" }
blake2 = { version = "0.9", default-features = false }
num-traits = { version = "0.2" }
rusty-hook = { version = "0.11" }

[features]
default = ["cli"]
cli = ["parallel", "setup-utils/cli"]
parallel = [
    "ark-ec/parallel",
    "ark-ff/parallel",
    "ark-std/parallel",
    "rayon",
    "setup-utils/parallel",
]
wasm = ["setup-utils/wasm"]

benchmark = ["criterion"]
testing = ["parallel"]

[[test]]
name = "marlin"
path = "tests/marlin.rs"
required-features = ["phase1/testing", "cli"]
