[package]
name = "phase2-cli"
version = "0.3.0"
authors = ["Kobi Gurkan <kobigurk@gmail.com>"]
description = "CLI implementation of Phase 2"
homepage = "https://github.com/celo-org/snark-setup"
repository = "https://github.com/celo-org/snark-setup"
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
phase2 = { path = "../phase2", default-features = false }
setup-utils = { path = "../setup-utils", default-features = false }

ark-ec = { version = "0.4", features = ["std"] }
ark-serialize = { version = "0.4", features = ["std"] }
ark-bls12-377 = { version = "0.4", features = ["std"] }
ark-bls12-381 = { version = "0.4", features = ["std"] }
ark-bw6-761 = { version = "0.4", features = ["std"] }
ark-groth16 = { version = "0.4", features = ["std"] }

gumdrop = { version = "0.8" }
hex = { version = "0.4" }
memmap = { version = "0.7" }
rand = { version = "0.8" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.2" }
phase1 = { path = "../phase1" }
#epoch-snark = { git = "https://github.com/celo-org/celo-bls-snark-rs", branch = "straka/integration_info" }
epoch-snark = { git = "https://github.com/celo-org/celo-bls-snark-rs", rev = "0995862883b7f88da5ef8e9102f4173a3f3bf20d" }

anyhow = "1"

[dev-dependencies]
rand_xorshift = { version = "0.3" }
wasm-bindgen-test = { version = "0.3" }

[build-dependencies]
rustc_version = { version = "0.4" }

[features]
default = ["cli"]
cli = ["phase2/cli", "parallel", "setup-utils/cli", "phase1/cli"]
parallel = [
    "setup-utils/parallel",
    "phase2/parallel",
    "phase1/parallel",
] # PITODO

[[bin]]
name = "phase2"
required-features = ["cli"]
