[package]
name = "phase2-cli"
version = "0.3.0"
authors = ["Kobi Gurkan <kobigurk@gmail.com>"]
description = "CLI implementation of Phase 2"
homepage = "https://github.com/celo-org/snark-setup"
repository = "https://github.com/celo-org/snark-setup"
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
phase2 = { path = "../phase2", default-features = false }
setup-utils = { path = "../setup-utils", default-features = false }

ark-ec = { version = "0.4", features = ["std"] }
ark-serialize = { version = "0.4", features = ["std"] }
ark-bls12-377 = { version = "0.4", features = ["std"] }
ark-bls12-381 = { version = "0.4", features = ["std"] }
ark-bw6-761 = { version = "0.4", features = ["std"] }
ark-groth16 = { version = "0.4", features = ["std"] }
ark-mnt4-753 = { version = "0.4", features = ["std"] }
ark-mnt6-753 = { version = "0.4", features = ["std"] }
ark-poly = { version = "0.4", features = ["std"] }
ark-snark = { version = "0.4", optional = true }
ark-std = { version = "0.4", features = ["std"], optional = true }
ark-relations = { version = "0.4", features = ["std"], optional = true }

gumdrop = { version = "0.8" }
hex = { version = "0.4" }
memmap = { version = "0.7" }
rand = { version = "0.8" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.2" }
phase1 = { path = "../phase1" }

anyhow = "1"

[dev-dependencies]
rand_xorshift = { version = "0.3" }
wasm-bindgen-test = { version = "0.3" }

[build-dependencies]
rustc_version = { version = "0.4" }

[features]
default = ["cli"]
cli = [
    "phase2/cli",
    "parallel",
    "setup-utils/cli",
    "phase1/cli",
    "ark-relations",
    "ark-std",
    "ark-snark",
]
parallel = [
    "setup-utils/parallel",
    "phase2/parallel",
    "phase1/parallel",
    "ark-ec/parallel",
    "ark-groth16/parallel",
]

[[bin]]
name = "phase2"
required-features = ["cli"]

[[bin]]
name = "create_circuit"
required-features = ["cli", "phase2/testing"]

[[bin]]
name = "test_circuit"
required-features = ["cli", "phase2/testing"]

[[bin]]
name = "prepare_phase2"
required-features = ["cli"]
