[package]
name = "phase2"
version = "0.3.0"
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Georgios Konstantopoulos <me@gakonst.com>",
    "Kobi Gurkan <kobigurk@gmail.com>",
    "The Aleo Team <hello@aleo.org>",
]
description = "Library for performing MPCs for creating zk-SNARK public parameters"
homepage = "https://github.com/celo-org/snark-setup"
repository = "https://github.com/celo-org/snark-setup"
license = "MIT/Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[test]]
name = "mpc"
path = "tests/mpc.rs"
required-features = ["phase2/testing"]

[dependencies]
setup-utils = { path = "../setup-utils", default-features = false }

ark-ec = { version = "0.4", features = ["std"] }
ark-ff = { version = "0.4", features = ["std"] }
ark-groth16 = { version = "0.4", features = ["std"] }
ark-serialize = { version = "0.4", features = ["std"] }
ark-std = { version = "0.4", features = ["std"] }
ark-relations = { version = "0.4", features = ["std"] }
ark-r1cs-std = { version = "0.4", features = ["std"], optional = true }
ark-crypto-primitives = { version = "0.4", features = [
    "std",
    "crh",
    "r1cs",
], optional = true }

ark-bls12-377 = { version = "0.4", features = ["std"], optional = true }
ark-bls12-381 = { version = "0.4", features = ["std"], optional = true }
ark-bw6-761 = { version = "0.4", features = ["std"], optional = true }
ark-mnt4-753 = { version = "0.4", features = ["std"], optional = true }
ark-mnt6-753 = { version = "0.4", features = ["std"], optional = true }

byteorder = { version = "1.4" }
cfg-if = { version = "1.0" }
crossbeam = { version = "0.8" }
itertools = { version = "0.11", optional = true }
num_cpus = { version = "1.16" }
rand = { version = "0.8" }
rayon = { version = "1.7", optional = true }
tracing = { version = "0.1" }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

web-sys = { version = "0.3", features = ["console"], optional = true }

[dev-dependencies]
phase1 = { path = "../phase1", features = ["testing"] }
phase2 = { path = "./", features = ["testing"] }

wasm-bindgen-test = { version = "0.3" }

rusty-hook = { version = "0.11" }
tracing-subscriber = { version = "0.2" }

[features]
default = ["parallel"]
testing = [
    "parallel",
    "ark-bls12-377",
    "ark-bls12-381",
    "ark-bw6-761",
    "ark-mnt4-753",
    "ark-mnt6-753",
    "ark-r1cs-std",
    "ark-crypto-primitives",
]
parallel = [
    "rayon",
    "setup-utils/parallel",
    "ark-ec/parallel",
    "ark-ff/parallel",
    "ark-groth16/parallel",
    "ark-std/parallel",
]

cli = ["setup-utils/cli"]
wasm = [
    "console_error_panic_hook",
    "itertools",
    "web-sys",
    "setup-utils/wasm",
    "ark-bls12-377",
    "ark-bls12-381",
    "ark-bw6-761",
]
