[package]
name = "setup-utils"
version = "0.3.0"
authors = [
    "Georgios Konstantopoulos <me@gakonst.com>",
    "Kobi Gurkan <kobigurk@gmail.com>",
    "The Aleo Team <hello@aleo.org>",
]
edition = "2021"

[[bench]]
name = "io"
harness = false
required-features = ["phase1"]

[[bench]]
name = "math"
harness = false

[dependencies]
ark-ec = { version = "0.4", features = ["std"] }
ark-ff = { version = "0.4", features = ["std"] }
ark-poly = { version = "0.4", features = ["std"] }
ark-serialize = { version = "0.4", features = ["std"] }
ark-std = { version = "0.4", features = ["std"] }
ark-relations = { version = "0.4", features = ["std"] }

blake2 = { version = "0.10.6" }
blake2s_simd = { version = "1.0.1" }
cfg-if = { version = "1.0.0" }
crossbeam = { version = "0.8.2" }
num_cpus = { version = "1.16.0" }
rand = { version = "0.8.5" }
rand_chacha = { version = "0.3.1" }
rayon = { version = "1.7.0", optional = true }
thiserror = { version = "1.0.44" }
tracing = { version = "0.1" }
typenum = { version = "1.16.0" }
sha2 = "0.10"

[dev-dependencies]
phase1 = { path = "../phase1" }

algebra = { git = "https://github.com/scipr-lab/zexe", version = "0.1.1-alpha.0", package = "algebra", features = [
    "bls12_377",
    "bw6_761",
] }

criterion = { version = "0.3.1" }
rusty-hook = { version = "0.11.2" }

[features]
default = ["parallel"]
cli = ["parallel"]
wasm = []

parallel = [
    "rayon",
    "ark-ec/parallel",
    "ark-ff/parallel",
    "ark-poly/parallel",
    "ark-std/parallel",
]
