[package]
name = "setup-utils"
version = "0.3.0"
authors = [
    "Georgios Konstantopoulos <me@gakonst.com>",
    "Kobi Gurkan <kobigurk@gmail.com>",
    "The Aleo Team <hello@aleo.org>",
]
edition = "2021"

[[bench]]
name = "io"
harness = false
required-features = ["phase1"]

[[bench]]
name = "math"
harness = false

[dependencies]
ark-bls12-377 = { version = "0.4", features = ["std"] }
ark-bls12-381 = { version = "0.4", features = ["std"] }
ark-bw6-761 = { version = "0.4", features = ["std"] }
ark-ec = { version = "0.4", features = ["std"] }
ark-ff = { version = "0.4", features = ["std"] }
ark-poly = { version = "0.4", features = ["std"] }
ark-serialize = { version = "0.4", features = ["std"] }
ark-std = { version = "0.4", features = ["std"] }
ark-relations = { version = "0.4", features = ["std"] }

blake2 = { version = "0.10" }
blake2s_simd = { version = "1.0" }
cfg-if = { version = "1.0" }
crossbeam = { version = "0.8" }
num_cpus = { version = "1.16" }
rand = { version = "0.8" }
rand_chacha = { version = "0.3" }
rayon = { version = "1.7", optional = true }
thiserror = { version = "1.0" }
tracing = { version = "0.1" }
typenum = { version = "1.16" }
sha2 = "0.10"
num-traits = { version = "0.2" }
either = "1.9.0"
itertools = "0.11"

[dev-dependencies]
phase1 = { path = "../phase1", features = ["testing"] }

criterion = { version = "0.3" }
rusty-hook = { version = "0.11" }
rand_xorshift = { version = "0.3" }

[features]
default = ["parallel"]
cli = ["parallel"]
wasm = []

parallel = [
    "rayon",
    "ark-ec/parallel",
    "ark-ff/parallel",
    "ark-poly/parallel",
    "ark-std/parallel",
]
